# shatters-client

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  api.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bridge/: Cargo.toml  build.rs
src-tauri/bridge/src/: client.rs  error.rs  lib.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/: Sidebar.tsx  sidebar.css
src/styles/: app.css  global.css
src/views/: Chat.tsx  Contacts.tsx  Login.tsx  Settings.tsx  chat.css  contacts.css  login.css  settings.css
