[package]
name = "shatters-client"
version = "0.1.0"
edition = "2021"
description = "Shatters desktop client (Tauri v2)"

[lib]
name = "shatters_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "shatters-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
shatters-bridge = { path = "bridge" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
